# SPIRE

./: CMakeLists.txt  README.md
ext_libs/iml-1.0.5/: ChangeLog  README
ext_libs/iml-1.0.5/src/: RNSop.h  certsolve.h  mtrans.h  padiclift.h
src/: img_manip.cpp  qt_gui.hpp  surface_projection.cpp  svglib.hpp
